--- a/auction_application/pom.xml
+++ b/auction_application/pom.xml
@@ -117,6 +117,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>postgres-socket-factory</artifactId>
+			<version>1.15.0</version>
+		</dependency>
+
  </dependencies>
 
 	<build>
