--- a/auction_application/pom.xml
+++ b/auction_application/pom.xml
@@ -140,6 +140,11 @@
 			<version> 2.2.0 </version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
  </dependencies>
 
 	<build>
@@ -147,6 +152,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<mainClass>com.example.auction_application.AuctionApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
