--- a/auction_application/Dockerfile
+++ b/auction_application/Dockerfile
@@ -1,8 +1,20 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM eclipse-temurin:17-jdk-alpine as build
 
 WORKDIR /app
+COPY mvnw .
+COPY .mvn .mvn
+COPY pom.xml .
 
-COPY target/auction_application-0.0.1-SNAPSHOT.jar app.jar
+
+RUN ./mvnw dependency:go-offline
+
+COPY src src
+
+RUN ./mvnw clean package -DskipTests
+
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
